fix spacing for copy button

--- a/exhibit/static/css/style.css
+++ b/exhibit/static/css/style.css
@@ -277,10 +277,6 @@ h3 {
     padding-left: 0.3rem;
 }
 
-.double-header-action {
-    margin-left: 3rem;
-}
-
 .header-action {
     margin-left: 8rem;
 }
